                  (e.g. it allows usage of links) because it accepts now <script type="*/html">
                  or DOM queries for the content.
        # Apps :
            * Persons :
                - The model 'Address' gets new semantic fields (like ZipCodeField) which allow to
                  easily customise things (like the form field, the field printer etc...).
            * Activities:
                - A new 'FullCalendarBrick' base class for calendar bricks has been added.
                - The JavaScript component 'creme.ActivityCalendar' has been improved :
                    - The flag 'headlessMode' has been added.
                    - The property 'allowEventOverlaps' (boolean or method) has been added.
                    - The property 'allowEventCreate' (boolean) has been added.
            * Geolocation:
                - These URLs used in brick controllers (JavaScript) can be overridden in Python code now
                  (so it does not require to override an entire template) :
                    - DetailMapBrick.update_address_url
                    - FilteredMapBrick.addresses_url
                    - NeighboursMapBrick.neighbours_url
                - Markers with custom icons are now supported in maps :
                    - The new registry 'geomarker_icon_registry' allows to register an icon for a model.
                    - The new setting key 'geolocation-use_entity_icon_key' enables the feature.
                - The JSON data of 'creme.geolocation.PersonsBrick()' controller is now stored in a script.

    Breaking changes :
    ------------------
        # Deprecated stuffs which have been removed :
            - In 'creme_core.gui' :
                - In 'field_printers', the function 'image_size()' & the constants MAX_HEIGHT/MAX_WIDTH have been removed.
                - In the class 'mass_import.FormRegistry' :
                    - The methods 'get()' & 'is_registered()' have been removed.